overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,3 +3,7 @@
 li{
   list-style-type: none;
 }
+
+body{
+  overflow: hidden;
+}
